--- a/htmlmjproject.html
+++ b/htmlmjproject.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Great MJ Fan Page</title>
-    <link rel="stylesheet" href="./css/mjstyles.css" />
+    <link rel="stylesheet" href="css/mjstyles.css" />
 
 </head>
 
