--- a/htmlmjproject.html
+++ b/htmlmjproject.html
@@ -79,7 +79,7 @@
             var scriptElement = document.createElement('script');
             scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 <br>
-<a href="/bootstrapfinal.html">Go to Professional Page</a>
+<a href="bootstrapfinal.html">Go to Professional Page</a>
 <br>
 <a href="#top">Go to Top</a>
 <br>
